[package]
name = "djanco_template"
version = "0.1.0"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0.37"
djanco = { path = "../dejacode-server" }
djanco_ext = { path = "../djanco_query" }
syn = { version = "1.0.57", features = ["full", "extra-traits"] }