[package]
name = "djanco_template"
version = "0.1.0"
authors = ["Konrad Siek <konrad.siek@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
anyhow = "1.0.37"
djanco = { path = "../../djanco" }
#{ git = "https://github.com/PRL-PRG/djanco.git", branch = "mark3" }
djanco_ext = { path = "../djanco_ext" }
syn = { version = "1.0.57", features = ["full", "extra-traits"] }
git2 = "0.13"
git2_credentials = "0.7.1"
tempfile = "3.2.0"

fs_extra = "1.2.0" # copying directories